--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -33,8 +33,8 @@ jobs:
     - name: Get Status
       run: npm start
       env:
-          CPOLAR_EMAIL: ${{ secrets.CPOLAR_EMAIL }}
-          CPOLAR_PASSWORD: ${{ secrets.CPOLAR_PASSWORD }}
+          CPOLAR_EMAIL: ${{ 192819925@qq.com }}
+          CPOLAR_PASSWORD: ${{ fyz2023210602008 }}
 
     - name: Send mail ✉️
       uses: dawidd6/action-send-mail@v2
@@ -43,11 +43,11 @@ jobs:
         server_address: smtp.163.com
         # smtp 服务器端口
         server_port: 465
-        username: ${{secrets.MAIL_USERNAME}}
-        password: ${{secrets.MAIL_PASSWORD}}
+        username: ${{fyz20180908@163.com}}
+        password: ${{LOPNYHGGJIVTWPFM}}
         subject: cpolar今日状态
         body: file://index.html
-        to: 1772591173@qq.com
+        to: fyz20180908@163.com
         from: GitHub Actions
         content_type: text/html
         convert_markdown: true
