--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -5,10 +5,10 @@ name: Node.js CI
 
 on:
   # 手动触发
-  #workflow_dispatch:
+  workflow_dispatch:
   # 定时器
-  schedule: 
-     - cron: '0 7 * * *'
+  #schedule: 
+  #   - cron: '0 7 * * *'
 
 jobs:
   build:
